--- a/json/index.html
+++ b/json/index.html
@@ -39,7 +39,8 @@
         let studentdata = JSON.parse(student);
         alert(typeof studentdata);
         //document.getElementById("demo").innerHTML = student.name; //or student["name"]
-        document.getElementById("demo").innerHTML = studentdata[1]["name"]; //or student["name"]
+        document.getElementById("demo").innerHTML = studentdata[0]["name"]; //or student["name"]
+        //document.getElementById("demo").innerHTML = studentdata[1]["name"]; //or student["name"]
     </script>
     
 </body>
