--- a/json/index.html
+++ b/json/index.html
@@ -40,7 +40,8 @@
         alert(typeof studentdata);
         //document.getElementById("demo").innerHTML = student.name; //or student["name"]
         document.getElementById("demo").innerHTML = studentdata[0]["name"]; //or student["name"]
-        //document.getElementById("demo").innerHTML = studentdata[1]["name"]; //or student["name"]
+        document.getElementById("demo").innerHTML = studentdata[0]["email"]; //or student["name"]
+        //document.getElementById("demo").innerHTML = studentdata[1]["name"]; //or student["name"] for 2nd name
     </script>
     
 </body>
